[project]
name = "image-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
