[project]
name = "pinterest-scraper"
version = "4.1.0"
description = "Pinterest数据采集工具，支持关键词搜索、Pin详情页扩展策略、实时进度可视化、仅下载图片功能和数据库合并工具"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pinterest Scraper Team"}
]
keywords = ["pinterest", "scraper", "web-scraping", "data-collection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # 核心依赖
    "patchright>=1.52.5",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.3",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "fake-useragent>=1.4.0",
    # 数据库依赖
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    # 异步依赖
    "aiohttp>=3.8.0",
    "aiofiles>=23.2.0",
    "asyncio-throttle>=1.0.2",
    # 网络分析模块依赖
    "tldextract>=5.1.0",
    # UI和进度显示
    "tqdm>=4.67.1",
    "psutil>=7.0.0",
    "tabulate>=0.9.0",
    "brotli>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
pinterest-scraper = "main:main"
install-browsers = "install_browsers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]


